--- a/javaee/src/main/webapp/brad05.html
+++ b/javaee/src/main/webapp/brad05.html
@@ -2,9 +2,14 @@
 <h1>Brad Big Company</h1>
 <hr />
 
+<!-- / => root Server root  -->
 <form action="Brad05">
 	Account: <input type="text" name="account" /><br/>
 	Password: <input type="password" name="passwd" /><br/>
+	Gender: 
+		<input type="radio" name="gender" value="m" />Male 
+		<input type="radio" name="gender" value="f" />Female
+	<br />
 	<input type="submit" value="登入" />
 </form>
 
