--- a/javaee/src/main/webapp/brad05.html
+++ b/javaee/src/main/webapp/brad05.html
@@ -10,6 +10,14 @@
 		<input type="radio" name="gender" value="m" />Male 
 		<input type="radio" name="gender" value="f" />Female
 	<br />
+	興趣:<br> 
+		<input type="checkbox" name="favority" value="1" />打電腦
+		<input type="checkbox" name="favority" value="2" />打遊戲<br>
+		<input type="checkbox" name="favority" value="3" />打籃球
+		<input type="checkbox" name="favority" value="4" />打麻將<br>
+		<input type="checkbox" name="favority" value="5" />打毛線
+		<input type="checkbox" name="favority" value="6" />打小孩<br>
+	
 	<input type="submit" value="登入" />
 </form>
 
