--- a/javaee/src/main/webapp/brad05.html
+++ b/javaee/src/main/webapp/brad05.html
@@ -3,7 +3,7 @@
 <hr />
 
 <!-- / => root Server root  -->
-<form action="Brad05">
+<form action="Brad05" method="post">
 	Account: <input type="text" name="account" /><br/>
 	Password: <input type="password" name="passwd" /><br/>
 	Gender: 
@@ -17,6 +17,13 @@
 		<input type="checkbox" name="favority" value="3" />打麻將<br>
 		<input type="checkbox" name="favority" value="4" />打毛線
 		<input type="checkbox" name="favority" value="5" />打小孩<br>
+	
+	<select name="area">
+		<option value="401">西屯區</option>
+		<option value="402">南屯區</option>
+		<option value="403">北屯區</option>
+		<option value="404">東屯區</option>
+	</select>
 	
 	<input type="submit" value="登入" />
 </form>
