--- a/javaee/src/main/webapp/brad06.html
+++ b/javaee/src/main/webapp/brad06.html
@@ -3,7 +3,13 @@
 <hr />
 <form action="Brad06" method="get">
 	<input type="number" name="x" />
-	+
+	<!-- URL編碼 encoding => URL解碼 decoding -->
+	<select name="op">
+		<option>+</option>
+		<option>-</option>
+		<option>x</option>
+		<option>/</option>
+	</select>
 	<input type="number" name="y" />
 	<input type="submit" value="=" />
 </form>
