--- a/javaee/src/main/webapp/brad16.html
+++ b/javaee/src/main/webapp/brad16.html
@@ -1,5 +1,9 @@
 <meta charset="UTF-8" />
-<form action="Brad16" enctype="multipart/form-data" method="post">
-	<input type="file" name="upload" /><br />
+<form action="Brad17" enctype="multipart/form-data" method="post">
+	Account: <input type="text" name="account" /><br>
+	File1: <input type="file" name="upload" /><br />
+	File2: <input type="file" name="upload" /><br />
+	File3: <input type="file" name="upload" /><br />
+	File4: <input type="file" name="upload" /><br />
 	<input type="submit" value="Upload" />
 </form>
